--- a/common/src/main/resources/assets/stone_age/lang/en_us.json
+++ b/common/src/main/resources/assets/stone_age/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.stone_age.test_item": "Item of Testing"
+  "item.stone_age.test_item": "Item of Testing",
+  "item.stone_age.bone_dagger": "Bone Dagger"
 }
