Added Localization and Models for new tools
Added default model and localized Bone Pickaxe and Bone Axe

Will create and add textures later

--- a/common/src/main/resources/assets/stone_age/lang/en_us.json
+++ b/common/src/main/resources/assets/stone_age/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.stone_age.test_item": "Item of Testing",
-  "item.stone_age.bone_dagger": "Bone Dagger"
+  "item.stone_age.bone_dagger": "Bone Dagger",
+  "item.stone_age.bone_pickaxe": "Bone Pickaxe",
+  "item.stone_age.bone_axe": "Bone Axe"
 }
